microservices-local/k8s/istio/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: microservices
spec:
  containers:
  - name: debug
    image: curlimages/curl:latest
    command: ['sleep', '3600']
  restartPolicy: Never
